@@ -17,7 +17,7 @@ from wagtail.utils.pagination import paginate
 permission_checker = PermissionPolicyChecker(permission_policy)
 
 
-def get_chooser_context():
+def get_chooser_js_data():
     """construct context variables needed by the chooser JS"""
     return {
         'step': 'chooser',
@@ -46,6 +46,23 @@ def get_image_result_data(image):
     }
 
 
+def get_chooser_context(request):
+    """Helper function to return common template context variables for the main chooser view"""
+
+    collections = Collection.objects.all()
+    if len(collections) < 2:
+        collections = None
+
+    return {
+        'searchform': SearchForm(),
+        'is_searching': False,
+        'query_string': None,
+        'will_select_format': request.GET.get('select_format'),
+        'popular_tags': popular_tags_for_model(get_image_model()),
+        'collections': collections,
+    }
+
+
 def chooser(request):
     Image = get_image_model()
 
@@ -61,7 +78,6 @@ def chooser(request):
     for hook in hooks.get_hooks('construct_image_chooser_queryset'):
         images = hook(images, request)
 
-    q = None
     if (
         'q' in request.GET or 'p' in request.GET or 'tag' in request.GET or
         'collection_id' in request.GET
@@ -80,6 +96,7 @@ def chooser(request):
             is_searching = True
         else:
             is_searching = False
+            q = None
 
             tag_name = request.GET.get('tag')
             if tag_name:
@@ -95,24 +112,17 @@ def chooser(request):
             'will_select_format': request.GET.get('select_format')
         })
     else:
-        searchform = SearchForm()
-
-        collections = Collection.objects.all()
-        if len(collections) < 2:
-            collections = None
-
         paginator, images = paginate(request, images, per_page=12)
 
-        return render_modal_workflow(request, 'wagtailimages/chooser/chooser.html', None, {
+        context = get_chooser_context(request)
+        context.update({
             'images': images,
             'uploadform': uploadform,
-            'searchform': searchform,
-            'is_searching': False,
-            'query_string': q,
-            'will_select_format': request.GET.get('select_format'),
-            'popular_tags': popular_tags_for_model(Image),
-            'collections': collections,
-        }, json_data=get_chooser_context())
+        })
+        return render_modal_workflow(
+            request, 'wagtailimages/chooser/chooser.html', None, context,
+            json_data=get_chooser_js_data()
+        )
 
 
 def image_chosen(request, image_id):
@@ -128,8 +138,6 @@ def image_chosen(request, image_id):
 def chooser_upload(request):
     Image = get_image_model()
     ImageForm = get_image_form(Image)
-
-    searchform = SearchForm()
 
     if request.method == 'POST':
         image = Image(uploaded_by_user=request.user)
@@ -164,12 +172,21 @@ def chooser_upload(request):
         form = ImageForm(user=request.user)
 
     images = Image.objects.order_by('-created_at')
+
+    # allow hooks to modify the queryset
+    for hook in hooks.get_hooks('construct_image_chooser_queryset'):
+        images = hook(images, request)
+
     paginator, images = paginate(request, images, per_page=12)
 
+    context = get_chooser_context(request)
+    context.update({
+        'images': images,
+        'uploadform': form,
+    })
     return render_modal_workflow(
-        request, 'wagtailimages/chooser/chooser.html', None,
-        {'images': images, 'uploadform': form, 'searchform': searchform},
-        json_data=get_chooser_context()
+        request, 'wagtailimages/chooser/chooser.html', None, context,
+        json_data=get_chooser_js_data()
     )
 
 
