@@ -25,6 +25,7 @@ Changelog
  * Fix: Site.get_site_root_paths() preferring other sites over the default when some sites share the same root_page (Andy Babic)
  * Fix: Pages with missing model definitions no longer crash the API (Abdulmalik Abdulwahab)
  * Fix: Strip null characters from paths when checking for redirects (Andrew Crewdson)
+ * Fix: Rich text image chooser no longer skips format selection after a validation error (Matt Westcott)
 
 
 2.1.1 (xx.xx.xxxx) - IN DEVELOPMENT
